[package]
name = "redmob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
redis = { version = "0.21", features = ["aio", "tokio-comp", "cluster"] }
log = "0.4"
pretty_env_logger = "0.4"
mongodb = "2.0.0"
futures = "0.3.18"