[package]
name = "redmob"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
redis = { version = "0.21", features = ["aio", "tokio-comp", "cluster", "connection-manager"] }
log = "0.4"
pretty_env_logger = "0.5"
mongodb = { version = "3.0.1"}
futures = "0.3"
serde = "1.0"
serde_json = "1.0"